Archive2/53/db75cd80f7d92b/output
main.cpp:2:41: error: expected unqualified-id before '|' token
                                         |
                                         ^
